@@ -24,7 +24,6 @@ import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -56,7 +55,7 @@ public class UiRoutesScanner {
 
 	private List<String> readLines(InputStream input) {
 		try (BufferedReader buffer = new BufferedReader(new InputStreamReader(input, StandardCharsets.UTF_8))) {
-			return buffer.lines().map(String::trim).filter(StringUtils::hasText).collect(Collectors.toList());
+			return buffer.lines().map(String::trim).filter(StringUtils::hasText).toList();
 		}
 		catch (IOException ex) {
 			log.warn("Couldn't read routes from", ex);
